fix: favicon and dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,11 +12,11 @@
 :root {
   --ifm-color-primary: #356ddb;
   --ifm-color-primary-dark: #356ddb;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-darker: #356ddb;
+  --ifm-color-primary-darkest: #356ddb;
+  --ifm-color-primary-light: #356ddb;
+  --ifm-color-primary-lighter: #356ddb;
+  --ifm-color-primary-lightest: #356ddb;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-spacing-horizontal: 40px;
@@ -29,13 +29,15 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #ff9828;
+  --ifm-color-primary-dark: #ff9828;
+  --ifm-color-primary-darker: #ff9828;
+  --ifm-color-primary-darkest: #ff9828;
+  --ifm-color-primary-light: #ff9828;
+  --ifm-color-primary-lighter: #ff9828;
+  --ifm-color-primary-lightest: #ff9828;
+  --ifm-font-color-base: #fff;
+  --ifm-blockquote-color: #c8c8c8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
